--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
         "sass-loader": "^11.0.1"
     },
     "dependencies": {
-        "jquery": "^3.6.1"
+        "autoprefixer": "10.4.5",
+        "jquery": "^3.6.1",
+        "mini-css-extract-plugin": "^2.6.1",
+        "node-sass": "^6.0.1"
     }
 }
